--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,14 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 include(clang_tidy)
 
-find_package(FMT    CONFIG REQUIRED)
 find_package(raylib CONFIG REQUIRED)
+find_package(EnTT   CONFIG REQUIRED)
+find_package(FMT    CONFIG REQUIRED)
 
 set(calc_ExternalLibraries
-    fmt::fmt
     raylib
+    EnTT::EnTT
+    fmt::fmt
 )
 
 add_subdirectory(calc)
