--- a/calc/source/CMakeLists.txt
+++ b/calc/source/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_subdirectory(ui)
+add_subdirectory(Ui)
 
 set(calc_SourceFiles ${calc_SourceFiles}
-    "${DIR}/main.cpp"
-    "${DIR}/lexer.cpp"
-    "${DIR}/parser.cpp"
+    "${DIR}/Main.cpp"
+    "${DIR}/Calc.cpp"
+    "${DIR}/Lexer.cpp"
 
     PARENT_SCOPE
 )
