--- a/calc/source/ui/CMakeLists.txt
+++ b/calc/source/ui/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(calc_SourceFiles ${calc_SourceFiles}
-    "${DIR}/layout.cpp"
+    "${DIR}/Layout.cpp"
 
     PARENT_SCOPE
 )
